--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,98 @@
-.card{
-  height: 950px;
-  width: 340px;
-  border: none;
+body {
+  margin: 0px;
 }
 
-img{
-  height:650px;
-  width:340px;
-  margin-bottom: 10px;
+.App {
+  font-family: sans-serif;
+}
+
+.moive-container {
+  width: 340px;
+  height: min-content;
+}
+
+.movie-poster {
+  width: 100%;
+  height: 640px;
   object-fit: cover;
 }
 
-.tittle{
-  display: inline;
+.movie-specs {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px;
 }
 
-span{
-  float: right;
-  font-size: large;
+.movie-summary {
+  margin: 0px;
 }
 
-button{
-  margin-right: 2px;
+.movie-list {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.App{
-  display:flex;
-  gap: 20px;
+.add-movie-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 500px;
+  margin: 10px auto;
+}
+
+.movie-rating {
+  display: flex;
+  align-items: center;
+}
+
+.game-box {
+  border: 1px solid black;
+  font-size: 160px;
+  height: 160px;
+  width: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+
+}
+
+.game-box:hover {
+  background-color: #a7a7a7b6;
+}
+
+.board {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: min-content;
+  margin: 16px auto;
+}
+
+.tic-tac-teo {
+  text-align: center;
+}
+
+.moive-details-container {
+  max-width: 750px;
+}
+
+.color-game {
+  margin-top: 50px;
+  display: flex;
+  gap: 10px;
+}
+
+.color-gamebox {
+  margin-left: 50px;
+}
+
+.loading {
+  display: grid;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
